feature: Global error class option, set error class

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 
-*:where(:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)) {
+*:where(:not(html, iframe, canvas, img, svg, video, audio, pre):not(svg *, symbol *)) {
 	all: unset;
 	display: revert;
 }
