--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 
-*:where(:not(html, iframe, canvas, img, svg, video, audio, pre):not(svg *, symbol *)) {
+*:where(:not(html, iframe, canvas, img, svg, video, audio, pre, button, fieldset):not(svg *, symbol *)) {
 	all: unset;
 	display: revert;
 }
@@ -10,7 +10,6 @@
 *::after {
 	box-sizing: border-box;
 }
-
 /* Safari - solving issue when using user-select:none on the <body> text input doesn't working */
 input,
 textarea {
@@ -26,15 +25,6 @@ textarea {
 /* revert the 'white-space' property for textarea elements on Safari */
 textarea {
 	white-space: revert;
-}
-
-button {
-	padding: 1rem 1.5rem;
-	background-color: #71a5de;
-	color: #fff;
-	border-radius: 10px;
-	margin-top: 0.5rem;
-	cursor: pointer;
 }
 
 
