--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -23,3 +23,11 @@
 .VPImage {
     filter: drop-shadow(0px 0px 30px rgba(66 184 131 / 40%));
 }
+
+iframe {
+	border: 1px solid #4b4b4b;
+	border-radius: 10px;
+	width: 100%;
+	height: 700px;
+	margin-top: 2rem;
+}
