--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -24,6 +24,12 @@
     filter: drop-shadow(0px 0px 30px rgba(66 184 131 / 40%));
 }
 
+.VPHero {
+	.VPImage {
+		width: 100%;
+	}
+}
+
 iframe {
 	border: 1px solid #4b4b4b;
 	border-radius: 10px;
